[package]
name = "parallax-tracer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Reth
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-node-types = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
async-trait = "0.1.73"
reth-tasks = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-db = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", version = "1.3.8", tag = "v1.3.8" }

alloy-consensus = { version = "0.13.0" }
alloy-primitives = { version = "0.8.25", features = ["rlp"] }
alloy-sol-types = { version = "0.8.25", features = ["json"] }
alloy-rpc-types-trace = "0.13.0"
alloy-rpc-types = { version = "0.13.0", features = ["jsonrpsee-types", "eth"] }

alloy-evm = { version = "0.3.2", default-features = false }

revm-primitives = { version = "16.0.0-alpha.5", features = [
	"std",
], default-features = false }
revm-inspectors = "0.18.0"
revm-inspector = { version = "2.0.0", default-features = false }
revm = { version = "21.0.0", features = [
	"std",
	"secp256k1",
	"optional_balance_check",
	"optional_block_gas_limit",
], default-features = false }

tracing = "0.1.37"
futures = "0.3.28"
num_cpus = "1.16.0"
rayon = "1.7.0"
bitflags = "2.4"
auto_impl = "1.1.0"

# error
eyre = "0.6.8"
thiserror = "2.0.12"
serde = "1.0.205"
serde_json = "1.0.1"

# Async
tokio = { version = "1.28.2", features = ["full"] }


[features]
default = ["local-reth"]
local-reth = []
